// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "allOf": [
        {
          "properties": {
            "n1": {
              "type": "number",
            },
          },
          "required": [
            "n1",
          ],
          "type": "object",
        },
        {
          "properties": {
            "n2": {
              "type": "number",
            },
          },
          "required": [
            "n2",
          ],
          "type": "object",
        },
      ],
    },
    {
      "properties": {
        "s": {
          "type": "string",
        },
      },
      "required": [
        "s",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "b": {
      "type": "boolean",
    },
  },
  "required": [
    "b",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "properties": {
        "a": {
          "type": "number",
        },
        "b": {
          "type": "string",
        },
      },
      "required": [],
      "type": "object",
    },
    {
      "properties": {
        "i": {
          "type": "string",
        },
      },
      "required": [
        "i",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "o": {
      "type": "boolean",
    },
  },
  "required": [
    "o",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "properties": {
        "n": {
          "type": "number",
        },
      },
      "required": [
        "n",
      ],
      "type": "object",
    },
    {
      "properties": {
        "s": {
          "type": "string",
        },
      },
      "required": [
        "s",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "b": {
      "type": "boolean",
    },
  },
  "required": [
    "b",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "allOf": [
    {
      "anyOf": [
        {
          "properties": {
            "n1": {
              "type": "number",
            },
          },
          "required": [
            "n1",
          ],
          "type": "object",
        },
        {
          "properties": {
            "n2": {
              "type": "number",
            },
          },
          "required": [
            "n2",
          ],
          "type": "object",
        },
      ],
    },
    {
      "properties": {
        "s": {
          "type": "string",
        },
      },
      "required": [
        "s",
      ],
      "type": "object",
    },
  ],
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {
    "b": {
      "type": "boolean",
    },
  },
  "required": [
    "b",
  ],
  "type": "object",
}
`;

exports[`EndpointsFactory > .buildVoid() > Should be a shorthand for empty object output 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "properties": {},
  "required": [],
  "type": "object",
}
`;
